--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Développeur Web junior, je présente dans ce portfolio mes différents projets et mes compétences techniques..."
     />
-    <title>Nicolas Castagna - Développeur Web</title>
+    <meta name="author" content="Nicolas Castagna"/>
+    <meta name="keywords" content="Portfolio, développeur web"/>
+    <meta name="type" content="portfolio" />
+    <title>Nicolas Castagna | Développeur Web</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   </head>
   <body>
