--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,9 +16,13 @@
     <meta name="type" content="portfolio" />
     <title>Nicolas Castagna | Développeur Web</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <div id="root"></div>
-  
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+  </script>
   </body>
 </html>
