ajout des metadonnées open graph

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,14 +6,20 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/android-chrome-192x192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:url" content="https://nicolascastagna.fr/" >
+    <meta property="og:title" content="Nicolas Castagna | Développeur Web" >
+    <meta property="og:description" 
+    content="Développeur Web junior, je présente dans ce portfolio mes différents projets et mes compétences techniques" >
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://nicolascastagna.fr/images/profil.webp" >
     <meta name="theme-color" content="#ffffff">
     <meta
       name="description"
-      content="Développeur Web junior, je présente dans ce portfolio mes différents projets et mes compétences techniques..."
-    />
-    <meta name="author" content="Nicolas Castagna"/>
-    <meta name="keywords" content="Portfolio, développeur web"/>
-    <meta name="type" content="portfolio" />
+      content="Développeur Web junior, je présente dans ce portfolio mes différents projets et mes compétences techniques"
+    >
+    <meta name="author" content="Nicolas Castagna">
+    <meta name="keywords" content="Portfolio, développeur web">
+    <meta name="type" content="portfolio">
     <title>Nicolas Castagna | Développeur Web</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
