--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-      rel="apple-touch-icon"
-      href="%PUBLIC_URL%/android-chrome-192x192.png"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:url" content="https://nicolascastagna.fr/" />
-    <meta property="og:title" content="Nicolas Castagna | Développeur Web" />
-    <meta
-      property="og:description"
-      content="Développeur Web Front-End, je présente dans ce portfolio mes différents projets et mes compétences techniques"
-    />
-    <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://nicolascastagna.fr/images/profil.webp"
-    />
-    <meta name="theme-color" content="#ffffff" />
-    <meta
-      name="description"
-      content="Développeur Web junior, je présente dans ce portfolio mes différents projets et mes compétences techniques"
-    />
-    <meta name="author" content="Nicolas Castagna" />
-    <meta name="keywords" content="Portfolio, développeur web" />
-    <meta name="type" content="portfolio" />
-    <title>Nicolas Castagna | Développeur Web</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
-    />
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <link
+            rel="apple-touch-icon"
+            href="%PUBLIC_URL%/android-chrome-192x192.png"
+        />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta property="og:url" content="https://nicolascastagna.fr/" />
+        <meta
+            property="og:title"
+            content="Nicolas Castagna | Développeur Symfony/React"
+        />
+        <meta
+            property="og:description"
+            content="Développeur Full Stack, je présente dans ce portfolio mes différents projets et mes compétences techniques"
+        />
+        <meta property="og:type" content="website" />
+        <meta
+            property="og:image"
+            content="https://nicolascastagna.fr/images/profil.png"
+        />
+        <meta name="theme-color" content="#ffffff" />
+        <meta
+            name="description"
+            content="Développeur Full Stack, je présente dans ce portfolio mes différents projets et mes compétences techniques"
+        />
+        <meta name="author" content="Nicolas Castagna" />
+        <meta name="keywords" content="Portfolio, développeur web" />
+        <meta name="type" content="portfolio" />
+        <title>Nicolas Castagna | Développeur Full Stack</title>
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+        />
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    </head>
+    <body>
+        <div id="root"></div>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
+    </body>
 </html>
