--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
             href="%PUBLIC_URL%/android-chrome-192x192.png"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta property="og:url" content="https://nicolascastagna.fr/" />
+        <meta
+            property="og:url"
+            content="https://nicolascastagna.netlify.app/"
+        />
         <meta
             property="og:title"
             content="Nicolas Castagna | Développeur Symfony/React"
@@ -21,7 +24,7 @@
         <meta property="og:type" content="website" />
         <meta
             property="og:image"
-            content="https://nicolascastagna.fr/images/profil.png"
+            content="https://nicolascastagna.netlify.app/images/profil.png"
         />
         <meta name="theme-color" content="#ffffff" />
         <meta
